# rustystreamer

./: .env  .gitignore  .ignore  Cargo.toml  LICENSE  config.json  deployToZip.sh  index.html  readme.md  tailwind.config.js  thumbnail.sh  video.html  videoCollectionIndex.json  videoIndex.json
assets/css/: style.css  tailwind.css
assets/js/: edit-collection.js  list.js  populate-collection-select.js  uncategorized.js  video.js
migrations/2023-08-13-160258_init/: down.sql  up.sql
src/: collection_id.rs  config.rs  consts.rs  controller.rs  db_connection.rs  html_helper.rs  lib.rs  main.rs  queries.rs  range_header.rs  schema.rs  thumbnails.rs  uncategorized.rs  util.rs  video_collection.rs  video_controller.rs  video_entry.rs  video_id.rs  video_index.rs  video_time_stamps.rs  webmodels.rs
views/: edit-collection.html  index.html  uncategorized-video.html  uncategorized-videos.html  uncategorized.html  video.html
