[package]
name = "rustystreamer"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-files = "0.6.2"
mime = "0.3.17"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
rand = "0.8.5"
blake3 = "1.4.1"
diesel = { version = "2.1.0", features = ["sqlite"] }
dotenvy = "0.15"