[package]
name = "rustystreamer"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-files = "0.6.2"
mime = "0.3.17"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
rand = "0.8.5"
dotenvy = "0.15.7"
rusqlite = { version = "0.29.0", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.22.0"
html-escape = "0.2.13"
async-recursion = "1.0.5"
